# StableTrees

./: BTree.py  README.md  RL.py  cmd.txt  simulated_example.py  simulated_example_forest.py
StableTrees_examples/: ABU_experiment.py  Abutree3.py  Adaptive_vs_hyperparameters.py  Baseline_vs_sklearn.py  GTB_real_data.py  ISLR_baselines.py  Stable_loss.ipynb  box_plot_real.py  claim_frequency_estimation copy.ipynb  claim_frequency_estimation.ipynb  claim_frequency_results.py  datapreprocess.py  example_EvoTree.py  example_four.py  example_mse_simulated.py  example_one boosting.py  example_one rf.py  example_one.py  example_one_hyperparameters.py  example_one_tree.py  example_three.py  example_two.py  experiment.ipynb  experiment_simulated_data.ipynb  experimient_simulated_data.py  infomation_criteria.py  norauto.py  order_error.py  pareto_efficient.py  plot_methods.py  plot_pareto.py  plot_pareto_claim_freq.py  plot_regions.py  poisson_test.py  random_forest_example.ipynb  rf_test.py  simulated_example.py  simulated_example_forest.py  stackedrf_test.py  test_cir.py  (+6 more)
approximate-bayesian-update/: approximate_bayesian_tree_update.R  approximate_bayesian_tree_update.cpp
cpp/: CMakeLists.txt  cpp - Shortcut.lnk  node.hpp  wrappers.cpp
cpp/Tree/: MonteCarloTree.hpp  SemiRandomTree.hpp  StableTreeReg.hpp  node.hpp  probabalisticsplitter.hpp  splitter.hpp  splitterReg.hpp  stablesplitter copy.hpp  stabletree.hpp  tempCodeRunnerFile.hpp  test.cpp  tree.hpp  treebuilder.hpp
python/: TreePlotter.py  __init__.py  comfirm.py  setup.py  (+5 more)
python-package/: pyproject.toml  setup.py
(+167 files in other folders)
